--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 gunicorn
-Flask==0.8
+Flask>=0.10.1
 flask-restful
+Jinja2>=2.7.1
+MarkupSafe>=0.18
+Werkzeug>=0.9.4
+itsdangerous>=0.23
+wsgiref>=0.1.2
