--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask>=0.11.1
 Flask-RESTful>=0.3.5
 Flask-SQLAlchemy>=2.1
+gunicorn>=0.14.2
 itsdangerous>=0.24
 Jinja2>=2.8
 passlib>=1.6.5
 psycopg2>=2.6.2
+requests>=0.11.1
 SQLAlchemy>=1.1.1
 Werkzeug>=0.11.11
