--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,30 @@
 Flask>=0.11.1
 Flask-RESTful>=0.3.5
 Flask-SQLAlchemy>=2.1
+gapic-google-logging-v2==0.10.1
+google-api-python-client==1.5.3
+google-cloud==0.20.0
+google-cloud-bigquery==0.20.0
+google-cloud-bigtable==0.20.0
+google-cloud-core==0.20.0
+google-cloud-datastore==0.20.0
+google-cloud-dns==0.20.0
+google-cloud-error-reporting==0.20.0
+google-cloud-language==0.20.0
+google-cloud-logging==0.20.0
+google-cloud-monitoring==0.20.0
+google-cloud-pubsub==0.20.0
+google-cloud-resource-manager==0.20.0
+google-cloud-storage==0.20.0
+google-cloud-translate==0.20.0
+google-cloud-vision==0.20.0
 gunicorn>=0.14.2
+httplib2>=0.9.2
 itsdangerous>=0.24
 Jinja2>=2.8
 passlib>=1.6.5
+Pillow>=3.4.1
+protobuf>=3.1.0.post1
 psycopg2>=2.6.2
 requests>=0.11.1
 SQLAlchemy>=1.1.1
